# Swasthya-AI-CORE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docs.html  index.html  main.py  pyproject.toml  requirements.txt
config/: __init__.py  logging_config.py  settings.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  middleware.py
src/api/routers/: context.py  discovery.py  tasks.py
src/api/v1/: __init__.py  context_router.py  discovery_router.py  recommendation_router.py
src/common/: correlation.py  exceptions.py  logging.py
src/common/prompts/: context_prompts.py  discovery_prompts.py
src/config/: settings.py
src/db/: __init__.py  session.py
src/domain/tasks/: models.py  (+1 more)
src/dtos/: __init__.py  context_dtos.py  discovery_dtos.py  task_dtos.py
src/intelligence/: __init__.py
src/pipelines/: __init__.py  context_pipeline.py  discovery_pipeline.py  recommendation_pipeline.py
src/progress/: __init__.py  emitter.py  events.py  models.py
src/prompts/: __init__.py
src/ranking/: explainer.py  ranker.py  scorer.py
src/schemas/: __init__.py  context.py  discovery.py  hospital.py  progress.py  recommendation.py  research.py  shared.py
src/services/: __init__.py  context_service.py  discovery_service.py  task_service.py
src/utils/: __init__.py  distance.py  language.py  retry.py  timers.py  validators.py
src/workers/: __init__.py  __main__.py  celery_app.py  discovery_worker.py
tests/: regression_test.py  results.txt  test_discovery_logic.py  test_discovery_logic_2.py  test_e2e_pipeline.py
(+83 files in other folders)
