[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swasthya-ai-core"
version = "1.0.2"
description = "SWASTHYA AI CORE — Production-Grade Healthcare Intelligence Engine"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "T20"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
